--- a/index.html
+++ b/index.html
@@ -11,22 +11,72 @@
     <!-- Bootstrap v5.2 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Fonts -->
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid px-0">
         <!-- NAVBAR -->
+        <nav class="navbar navbar-dark navbar-expand-lg">
+            <div class="container-fluid">
+
+              <a class="navbar-brand active" aria-current="page" href="index.html">Smee's Auto Shop</a>
+
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#our-mission">Our Mission</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#special-services">Special Services</a>
+                  </li>  
+                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="services.html">Other Services</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+        </nav>
         <!-- JUMBOTRON -->
+        <div class="bg-light text-light" id="jumbotron-section">
+
+            <div class="container d-flex flex-column justify-content-end h-100">
+
+                <h1 class="display-1 fw-bolder">Smee's Auto Shop</h1>
+                <p class="">Lorem ipsum dolor sit amet consectetur.</p>
+
+                <!-- <a href="#" role="button" class="btn btn-outline-primary">
+                    <span class="visually-hidden">Next</span>
+                    <span aria-hidden="true">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </span>
+                </a> -->
+            </div>
+
+        </div>
+
     </header>
     <main>
         <!-- MAIN CONTENT -->
         <section id="our-mission">
             <h1>Our Mission</h1>
         </section>
-        <section id="top-services">
-            <h1>Top Services</h1>
+        <section id="special-services">
+            <h1>Special Services</h1>
         </section>
     </main>
     <footer>
