--- a/services.html
+++ b/services.html
@@ -17,8 +17,40 @@
     <link rel="stylesheet" href="./css/services.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid px-0">
         <!-- NAVBAR -->
+        <nav class="navbar navbar-dark navbar-expand-lg">
+            <div class="container-fluid">
+
+              <a class="navbar-brand"  href="index.html">Smee's Auto Shop</a>
+
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html#our-mission">Our Mission</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html#special-services">Special Services</a>
+                  </li>  
+                  
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="services.html">Other Services</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+        </nav>
         <!-- JUMBOTRON -->
     </header>
     <!-- MAIN CONTENT -->
