--- a/index.html
+++ b/index.html
@@ -11,14 +11,57 @@
     <!-- Bootstrap v5.2 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caladea&family=Emblema+One&display=swap" rel="stylesheet">
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid px-0">
         <!-- NAVBAR -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <i class="fa-solid fa-car-tunnel"></i>
+            <a class="navbar-brand" href="#">Smee Auto Shop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Our Mission</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#special-services">Special Services</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown link
+                    </a>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
         <!-- JUMBOTRON -->
+        <div class="bg-primary" id="jumbotron-section">
+            <div class="container justify-content-end h-100">
+                <h1 class="display-1 fw-bolder text-end ">Smee's Auto Shop</h1>
+            </div>
+        </div>
     </header>
     <main>
         <!-- MAIN CONTENT -->
@@ -37,9 +80,9 @@
             by Jacque S. and ITWD team
         </address>
         <!-- DISCLAIMER -->
-        <!-- <small>
+        <small>
             This material, including the images and text, is used for educational purposes only to enhance learning about HTML and CSS. The images used are sourced from free stock photo websites. It is not intended to depict real-life situations or events, and any resemblance to actual people, places, or events is purely coincidental. The sole purpose of using this material is to provide a learning experience for HTML and CSS students.
-        </small> -->
+        </small>
         <p>&copy; All rights reserved.</p>
     </footer>
     <!-- Bootstrap JS v5.2 CDN -->
