--- a/services.html
+++ b/services.html
@@ -35,7 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#special-services">Special Services</a>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./services.html">Services</a>
+                        <a class="nav-link 
+                        
+                        href="./services.html">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
