--- a/contact.html
+++ b/contact.html
@@ -11,50 +11,43 @@
     <!-- Bootstrap v5.2 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/d542d521c9.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caladea&family=Emblema+One&display=swap" rel="stylesheet">
     <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <a class="visually-hidden-focusable" href="#main-content">Skip to main content</a>
+    <header class="container-fluid px-0">
         <!-- NAVBAR -->
-        <header class="container-fluid px-0">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <i class="fa-solid fa-car-tunnel"></i>
-                <a class="navbar-brand" href="#">Smee Auto Shop</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Our Mission</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#special-services">Special Services</a>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./contact.html">Contact</a>
-                        <a class="nav-link active" aria-current="page" href="./services.html">Services</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown link
-                        </a>
-                        <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    </ul>
-                </div>
-                </div>
-            </nav>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <i class="fa-solid fa-car-tunnel"></i>
+            <a class="navbar-brand active" aria-current="page" href="index.html">Smee Auto Shop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Our Mission</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#special-services">Special Services</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
         <!-- JUMBOTRON -->
     </header>
     <!-- MAIN CONTENT -->
@@ -100,7 +93,7 @@
               </div>
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-primary">Sign in</button>
+              <button type="submit" class="btn btn-primary">Check Address</button>
             </div>
           </form>
     </main>
@@ -117,7 +110,5 @@
         </small> -->
         <p>&copy; All rights reserved.</p>
     </footer>
-    <!-- Bootstrap JS v5.2 CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
