--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap v5.2 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/8e231123cb.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Fonts -->
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css">
@@ -232,18 +232,66 @@
 
         </section>
     </main>
-    <footer>
-        <address>
-            <span>Smee's Auto Shop</span> 
-            made with 
-            <span>&#10084;</span>
-            by Jacque S. and ITWD team
-        </address>
-        <!-- DISCLAIMER -->
-        <!-- <small>
-            This material, including the images and text, is used for educational purposes only to enhance learning about HTML and CSS. The images used are sourced from free stock photo websites. It is not intended to depict real-life situations or events, and any resemblance to actual people, places, or events is purely coincidental. The sole purpose of using this material is to provide a learning experience for HTML and CSS students.
-        </small> -->
-        <p>&copy; All rights reserved.</p>
+    <footer class="container-fluid px-0 text-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-sm-12">
+            <section>
+              <h1 class="text-uppercase fw-bolder">Hours of Operation</h1>
+              <ul class="list-unstyled">
+                <li>Monday: 10 am - 5 pm</li>
+                <li>Tuesday: 10 am - 5 pm</li>
+                <li>Wednesday: 10 am - 5pm</li>
+                <li>Thursday: 10 am - 5 pm</li>
+                <li>Friday: 10 am - 6 pm</li>
+                <li>Saturday: 1 pm - 5 pm</li>
+                <li>Sunday: closed</li>
+              </ul>
+            </section>
+            <section>
+              <h1 class="text-uppercase fw-bolder">Call</h1>
+              <p>
+                <span aria-hidden="true">
+                  <i class="fa-solid fa-phone"></i>
+                </span>
+                1-800-090-0990
+              </p>
+            </section>
+            <section>
+              <h1 class="text-uppercase fw-bolder">Email</h1>
+              <p>
+                <span aria-hidden="true">
+                  <i class="fa-solid fa-envelope"></i>
+                </span>
+                smeeautoshop@email.com
+              </p>
+            </section>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <section class="d-md-flex flex-md-column align-items-md-end">
+              <h1 class="text-uppercase fw-bolder">Location</h1>
+              <address class="mb-4">
+                Pashion Auto Center<br>
+                1234 W. Pretend Ave<br>
+                Fresno, Ca 00000
+              </address>
+              <!-- GOOGLE MAP -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.604240146298!2d-119.78796568471212!3d36.732064979962736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise%20Industries!5e0!3m2!1sen!2sus!4v1678904271720!5m2!1sen!2sus" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+          </div>
+        </div>
+      </div>  
+      <address class="text-center">
+          <span>Smee's Auto Shop</span> 
+          made with 
+          <span>&#10084;</span>
+          by Jacque S. and ITWD team
+      </address>
+      <!-- DISCLAIMER -->
+      <!-- <small>
+          This material, including the images and text, is used for educational purposes only to enhance learning about HTML and CSS. The images used are sourced from free stock photo websites. It is not intended to depict real-life situations or events, and any resemblance to actual people, places, or events is purely coincidental. The sole purpose of using this material is to provide a learning experience for HTML and CSS students.
+      </small> -->
+      <p class="text-center mb-0">&copy; All rights reserved.</p>
     </footer>
     <!-- Bootstrap JS v5.2 CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
