refactored layout for estimate section

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         </div>
 
     </header>
-    <main class="container" id="main-content">
+    <main id="main-content">
         <!-- MAIN CONTENT -->
        
-        <section class="text-center" id="our-mission">
+        <section class="text-center container" id="our-mission">
             <h1 class="
             text-uppercase 
             border-top 
@@ -98,11 +98,17 @@
             </p>
         </section>
 
-        <aside>
-          <p class="text-uppercase">For a free estimate call 800-987-6543</p>
+        <aside class="container-fluid free-estimate-wrapper display-6 d-flex justify-content-center align-items-center">
+          <p class="text-uppercase fw-bolder">
+            For a free estimate call 
+            <span aria-hidden="true">
+                <i class="fa-solid fa-phone"></i>
+              </span>
+            1-800-987-6543
+        </p>
         </aside>
 
-        <section id="special-services">
+        <section class="container" id="special-services">
             <h1 class="
             text-uppercase 
             border-top 
